--- a/views/category.ejs
+++ b/views/category.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Use the category attribute to set the tab name -->
-    <title>...</title>
+    <title><%= category %></title>
     <!-- Link to style.css -->
     <link rel="stylesheet" href="/style.css">
   </head>
@@ -27,9 +27,9 @@
       
       <div class="item-card">
         <img src="<%= imageURL %>" />
-        <h3>...</h3>
-        <p>$...</p>
-        <a href="...">More info</a>
+        <h3><%= item.name %> </h3>
+        <p<%= item.price %>p>
+        <a href="<%= item.path %>">More info</a>
       </div>
 
     </div>
