--- a/views/category.ejs
+++ b/views/category.ejs
@@ -23,13 +23,14 @@
     <h2 class="center">Featured Items</h2>
     <div class="section">
       <!-- Modify the following to make one item card for each element of the items array -->
+
       <!-- You should use the values from data to dynamically populate the image, item name, cost, and path -->
       
       <div class="item-card">
-        <img src="<%= imageURL %>" />
-        <h3><%= item.name %> </h3>
-        <p<%= item.price %>p>
-        <a href="<%= item.path %>">More info</a>
+        <img src= <%= items[0].imageUrl %> />
+        <h3><%= items[0].name %> </h3>
+        <p<%= items[0].price %>p>
+        <a href= <%= items[0].path %>>More info</a>
       </div>
 
     </div>
