--- a/views/product.ejs
+++ b/views/product.ejs
@@ -22,24 +22,24 @@
         <!-- Use the name attribute to set the h2 -->
         <h2 class="center"><%= name %></h2>
         <!-- Use the imageUrl attribute to fix the image -->
-        <img src="<%= imageURL %>" class="main-image">
+        <img src="<%= imageUrl %>" class="main-image">
         <div class="color-options">
           <!-- PINK ONLY: Iterate over the colors array to make a color-option div for each color. Plug in the color into the background-color slot. -->
 
-            <div class="color-option" style="background-color: ...;"></div>
+            <div class="color-option" style="background-color: pink"></div>
 
         </div>
         <!-- Use the cost attribute to set the p tag -->
         <p class="center">$<%= cost %></p>
 
         <!-- Use conditions to show the first button if the quantity is over 0. Otherwise, show the Sold Out button. -->
-
+        <% let count = quantity %>
            <!-- Extra credit: Add JS such that when the Buy Now button is clicked, you add HTML underneath it that says "Added to cart" (review DOM manipulation!) -->
-
+            <% if (count > 0){ %>
           <button class="buy-now-button center">Buy Now</button>
-        
+          <% }else { %>
           <button class="buy-now-button" disabled>Sold Out</button>
-      
+          <% } %>
   
     </div>
 
